DDF-3434 Add UI for Theme

--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/theme-settings/theme-settings.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/theme-settings/theme-settings.less
@@ -6,4 +6,14 @@
         width: @minimumButtonSize;
         height: @minimumButtonSize;
     }
+
+    .theme-custom {
+        display: none;
+    }
+}
+
+@{customElementNamespace}theme-settings.has-custom-theme {
+    .theme-custom {
+        display: block;
+    }
 }
