--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/component.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/component.less
@@ -41,6 +41,7 @@
 @import 'input/input';
 @import 'input/boolean/input-boolean';
 @import 'input/date/input-date';
+@import 'input/color/input-color';
 @import 'input/bulk/input-bulk';
 @import 'input/enum/input-enum';
 @import 'input/radio/input-radio';
