--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/styles.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/styles.less
@@ -7,6 +7,7 @@
 @import "~select2/dist/css/select2.css";
 @import "~golden-layout/src/css/goldenlayout-base.css";
 @import "~golden-layout/src/css/goldenlayout-dark-theme.css";
+@import "~spectrum-colorpicker/spectrum.css";
 
 @import "../css/searchPage.css";
 @import "../css/style.css";
