--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/vars.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/vars.less
@@ -119,19 +119,19 @@
 .theme() when (@theme = sea) {
 
     //color palette
-    @primary-color: #507d88;
-    @positive-color: #719c3b;
-    @negative-color: #a12d0f;
-    @warning-color: #b45e29;
+    @primary-color: #45727E;
+    @positive-color: #65932D;
+    @negative-color: #992600;
+    @warning-color: #AD531D;
     @favorite-color: #d1d179;
 
     //color usage
-    @backgroundNavigation: rgb(159, 214, 255);
-    @backgroundAccentContent: rgb(3, 4, 6);
-    @backgroundDropdown: rgb(255, 247, 247);
-    @backgroundContent: rgb(242, 221, 221);
-    @backgroundModal: white;
-    @backgroundSlideout: rgb(11, 9, 9);
+    @backgroundNavigation: #144572;
+    @backgroundAccentContent: #e4f3fe;
+    @backgroundDropdown: #e4f3fe;
+    @backgroundContent: rgb(244, 253, 254);
+    @backgroundModal: #e4f3fe;
+    @backgroundSlideout: #e4f3fe;
 
     @import "mixins.less";
     @import "util.less";
