DDF-3441 Updates theming to use web worker, brings in typescript
 - Updates theming to offload processing to a web worker.
 - Adds typescript to allow ease development.  It's fairly picky.  You'll need to use import instead of define or require to get the benefits.  I've added a few typings t
o get us started.  I've also added a webworker typing to fill in some of the areas where it needs help (global and postMessage) at the moment.
 - Adds some base classes for workers to extend from.  We'll probably need to update / refine these as we make more web workers.  For now they keep things fairly simple.

--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/input/input.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/input/input.less
@@ -18,6 +18,7 @@
   }
 
   .for-error {
+        color: @button-text-color; 
         overflow: hidden;
         display: block;
         line-height: @minimumLineSize;
