--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/loading-companion/loading-companion.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/loading-companion/loading-companion.less
@@ -3,6 +3,8 @@
   position: absolute;
   left: 0px;
   top: 0px;
+  height: 100%;
+  width: 100%;
   font-size: @largeFontSize;
   text-align: center;
   .changeBackground(@backgroundAccentContent);
@@ -10,11 +12,78 @@
   overflow: hidden;
   line-height: 100%;
   z-index: @zIndexLoadingCompanion;
-}
+  .loading-bit {
+    width: @minimumSpacing;
+    position: absolute;
+    left: 50%;
+    border-top: @largeSpacing solid;
+    top: -@largeSpacing;
+    height: 100%;
+    animation: loading-companion 10*@coreTransitionTime infinite ease-in-out;
+  } 
 
-.is-medium-screen, .is-small-screen, .is-mobile-screen {
-  @{customElementNamespace}loading-companion {
-    line-height: 50vh;
+  .loading-bit:nth-child(1) {
+    left: @minimumSpacing;
+    animation-delay: @coreTransitionTime;
+  }
+  .loading-bit:nth-child(2) {
+    left: 25%;
+    animation-delay: 2*@coreTransitionTime;
+  }
+  .loading-bit:nth-child(3) {
+    left: 50%;
+    animation-delay: 3*@coreTransitionTime;
+  }
+  .loading-bit:nth-child(4) {
+    left: 75%;
+    animation-delay: 4*@coreTransitionTime;
+  }
+  .loading-bit:nth-child(5) {
+    left: ~'calc(100% - @{minimumSpacing})';
+    animation-delay: 5*@coreTransitionTime;
   }
 
+  .loading-bit:nth-child(6) {
+    left: @minimumSpacing;
+    animation-delay: @coreTransitionTime;
+    animation-direction: reverse;
+  }
+  .loading-bit:nth-child(7) {
+    left: 25%;
+    animation-delay: 2*@coreTransitionTime;
+    animation-direction: reverse;
+  }
+  .loading-bit:nth-child(8) {
+    left: 50%;
+    animation-delay: 3*@coreTransitionTime;
+    animation-direction: reverse;
+  }
+  .loading-bit:nth-child(9) {
+    left: 75%;
+    animation-delay: 4*@coreTransitionTime;
+    animation-direction: reverse;
+  }
+  .loading-bit:nth-child(10) {
+    left: ~'calc(100% - @{minimumSpacing})';
+    animation-delay: 5*@coreTransitionTime;
+    animation-direction: reverse;
+  }
+}
+
+@keyframes loading-companion {
+  0% {
+    transform: scale(1) translate3d(-50%, -@largeSpacing, 0);
+  }
+  40% {
+    transform: scale(1) translate3d(-50%, 50%, 0);
+  }
+  50% {
+    transform: scale(1) translate3d(-50%, 50%, 0);
+  }
+  60% {
+    transform: scale(1) translate3d(-50%, 50%, 0);
+  }
+  100% {
+    transform: scale(1) translate3d(-50%, calc(100% + 4*@largeSpacing), 0);
+  } 
 }
