--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/component.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/component.less
@@ -214,3 +214,11 @@
 @import 'about-menu/about-menu';
 @import 'hover-preview/hover-preview';
 @import 'dropdown/hover-preview/dropdown.hover-preview.less';
+@import 'workspace-lists/workspace-lists';
+@import 'dropdown/list-select/dropdown.list-select.less';
+@import 'list-select/list-select';
+@import 'list-item/list-item';
+@import 'list-editor/list-editor';
+@import 'dropdown/popout/dropdown.popout.less';
+@import 'result-add/result-add';
+@import 'list-create/list-create';
