--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/mixins.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/mixins.less
@@ -73,11 +73,11 @@
   cursor: pointer;
   opacity: @minimumOpacity;
 
-  &:hover {
+  &:hover:not(.is-disabled) {
     opacity: 1;
   }
 
-  &.is-active {
+  &.is-active:not(.is-disabled) {
     opacity: 1;
   }
 }
