--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/result-item/result-item.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/result-item/result-item.hbs
@@ -82,6 +82,8 @@
             <button class="result-download fa fa-download is-button is-neutral" title="Downloads the results associated product directly to your machine." data-help="Downloads
             the results associated product directly to your machine.">
             </button>
+            <button class="result-add is-button is-neutral" title="Add the result to a list, or make a new list with this result." data-help="Add the result to a list, or make a new list with this result.">
+            </button>
             <button class="result-save fa fa-star-o is-button is-neutral" title="Adds the result to your saved items." data-help="Adds the
             result to your saved items.">
             </button>
