--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/buttons.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/buttons.less
@@ -21,18 +21,18 @@ button.is-primary {
     font-size: @largeFontSize;
   }
 
-  &:hover {
+  &:hover:not('.is-disabled') {
     background: shade(@buttonColor, 10%);
     box-shadow: 0px 0px 2px shade(@buttonColor, 25%);
   }
 
-  &:focus {
+  &:focus:not('.is-disabled') {
     background: shade(@buttonColor, 25%);
     border: 0px 0px 2px shade(@buttonColor, 50%);
   }
 
   &.is-disabled, &:disabled {
-    background: tint(@buttonColor, 50%);
+    //background: tint(@buttonColor, 50%);
     cursor: not-allowed;
   }
 }
