--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/workspace-lists/workspace-lists.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/workspace-lists/workspace-lists.hbs
@@ -11,8 +11,14 @@
  *
  **/
  --}}
-<div class="list-empty">
-    
+<div align="center" class="list-empty">
+    <div class="is-header">
+        You don't have any lists.  Search for something and add it to a list, or click "Create New List" below.
+    </div>
+    <div class="is-divider"></div>
+    <button class="is-primary">
+        <div class="create-new-list"></div>
+    </button>
 </div>
 <div class="list-select">
 </div>
