--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/workspace-lists/workspace-lists.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/workspace-lists/workspace-lists.less
@@ -5,4 +5,20 @@
     .list-select {
         padding: @minimumSpacing;
     }
+
+    .list-empty {
+        display: none;
+    }
+}
+
+@{customElementNamespace}workspace-lists.is-empty {
+
+    .list-empty {
+        display: block;
+    }
+
+    .list-select,
+    .list-results {
+        display: none;
+    }
 }
