--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/list-item/list-item.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/list-item/list-item.less
@@ -39,8 +39,14 @@
   }
 
   .details-feed,
+  .details-empty,
   .details-title {
     padding: 0px @minimumSpacing;
+  }
+
+  .list-delete,
+  .details-empty {
+    display: none;
   }
 
   .list-color {
@@ -119,5 +125,20 @@
     width: ~'calc(100% - @{largeSpacing})';
     margin: 0px 0px 0px @largeSpacing;
     padding: @minimumSpacing;
+  }
+}
+
+@{customElementNamespace}list-item.is-empty {
+  .details-empty {
+    display: block;
+  }
+  .list-delete {
+    display: inline-block;
+  }
+  .details-feed {
+    display: none;
+  }
+  .list-run {
+    display: none;
   }
 }
