--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/result-add/result-add.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/result-add/result-add.less
@@ -9,14 +9,18 @@
         text-align: left;
         height: @minimumButtonSize;
         line-height: @minimumButtonSize;
+
+        span:first-of-type {
+            margin-right: @mediumSpacing;
+        }
     }
 
     .is-existing-list.fails-filter::after {
-        content: '(filtered)';
+        content: '';
     }
 
     .is-existing-list.already-contains::after {
-        content: '(contains)';
+        content: '';
     }
     
     button {
