--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/workspace-lists/workspace-lists.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/workspace-lists/workspace-lists.hbs
@@ -11,7 +11,7 @@
  *
  **/
  --}}
-<div align="center" class="list-empty">
+<div align="center" class="lists-empty">
     <div class="is-header">
         You don't have any lists.  Search for something and add it to a list, or click "Create New List" below.
     </div>
@@ -24,4 +24,9 @@
 </div>
 <div class="list-results">
 
+</div>
+<div class="list-empty">
+    <div class="is-header">
+        Your list is empty.  <button class="quick-search is-primary in-text">Search</button> for something and add it to the list, or <button class="quick-delete is-negative in-text">delete</button> this list.
+    </div>
 </div>
