--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/buttons.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/buttons.less
@@ -4,14 +4,6 @@ button {
   background: none;
   padding: 0px;
   border-radius: @border-radius;
-}
-
-button.is-primary {
-  background: @primary-color;
-}
-
-.button-mixin(@buttonColor) {
-  background: @buttonColor;
   font-size: @largeFontSize;
   padding: 0px;
   line-height: @minimumButtonSize;
@@ -20,6 +12,14 @@ button.is-primary {
   span {
     font-size: @largeFontSize;
   }
+}
+
+button.is-primary {
+  background: @primary-color;
+}
+
+.button-mixin(@buttonColor) {
+  background: @buttonColor;
 
   &:hover:not('.is-disabled') {
     background: shade(@buttonColor, 10%);
@@ -79,12 +79,9 @@ button.is-disabled {
   }
 }
 
-.is-button-group {
-  .whitespaceNowrap;
-
-  .inlineBlockDisplay(button);
-
-  > button {
-    .boxShadow;
-  }
+button.in-text {
+  padding: 0px @minimumSpacing;
+  height: auto;
+  line-height: inherit;
+  font-size: inherit;
 }
