--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/dropdown/popout/dropdown.popout.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/dropdown/popout/dropdown.popout.less
@@ -2,6 +2,6 @@
     display: block;
     position: relative;
     text-align: center;
-    height: @minimumButtonSize;
-    line-height: @minimumButtonSize;
+    height: inherit;
+    line-height: inherit;
 }
