--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/workspace-lists/workspace-lists.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/workspace-lists/workspace-lists.hbs
@@ -13,12 +13,11 @@
  --}}
 <div align="center" class="lists-empty">
     <div class="is-header">
-        You don't have any lists.  Search for something and add it to a list, or click "Create New List" below.
+        You don't have any lists.  <button class="quick-search is-primary in-text">Search</button> 
+        for something and add it to a list or create a 
+        <button class="quick-create is-primary in-text">
+        </button>.
     </div>
-    <div class="is-divider"></div>
-    <button class="is-primary">
-        <div class="create-new-list"></div>
-    </button>
 </div>
 <div class="list-select">
 </div>
@@ -29,4 +28,9 @@
     <div class="is-header">
         Your list is empty.  <button class="quick-search is-primary in-text">Search</button> for something and add it to the list, or <button class="quick-delete is-negative in-text">delete</button> this list.
     </div>
+</div>
+<div class="list-create">
+    <button class="is-primary">
+        <div class="create-new-list"></div>
+    </button>
 </div>
