--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/workspace-lists/workspace-lists.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/workspace-lists/workspace-lists.less
@@ -1,6 +1,7 @@
 @{customElementNamespace}workspace-lists {
     padding: @minimumSpacing 0px;
     .customElement;
+    overflow: hidden;
 
     .list-select {
         padding: @minimumSpacing;
@@ -9,7 +10,17 @@
     .lists-empty,
     .list-empty {
         display: none;
-        padding: @minimumSpacing;
+    }
+
+    .list-create {
+        > button {
+            width: 100%;
+        }
+    }
+
+    .list-results {
+        height: ~'calc(100% - 3*@{minimumLineSize} - 2*@{minimumButtonSize} - 20px)';
+        display: none;
     }
 }
 
@@ -20,7 +31,8 @@
     }
 
     .list-select,
-    .list-results {
+    .list-results,
+    .list-create {
         display: none;
     }
 }
@@ -33,5 +45,11 @@
 
     .list-results {
         display: none;
+    }
+}
+
+@{customElementNamespace}workspace-lists.has-selection {
+    .list-results {
+        display: block;
     }
 }
