--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/workspace-lists/workspace-lists.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/workspace-lists/workspace-lists.hbs
@@ -15,7 +15,7 @@
     <div class="is-header">
         You don't have any lists.  <button class="quick-search is-primary in-text">Search</button> 
         for something and add it to a list or create a 
-        <button class="quick-create is-primary in-text">
+        <button class="quick-create is-primary in-text is-composed">
         </button>.
     </div>
 </div>
