--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/component.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/component.less
@@ -222,3 +222,4 @@
 @import 'dropdown/popout/dropdown.popout.less';
 @import 'result-add/result-add';
 @import 'list-create/list-create';
+@import 'list-interactions/list-interactions';
