--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/list-item/list-item.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/list-item/list-item.hbs
@@ -41,8 +41,8 @@
             <div class="list-edit is-button" title="Edits the search criteria." data-help="Edits the search criteria.">
                 <span class="fa fa-pencil"></span>
             </div>
-            <div class="list-actions is-button" title="Shows a list of actions to take on the list." data-help="Shows a list of actions to take on the list.">
-            </div>
+            <button class="list-actions is-button" title="Shows a list of actions to take on the list." data-help="Shows a list of actions to take on the list.">
+            </button>
         </div>
     </div>
 </div>
