--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/list-editor/list-editor.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/list-editor/list-editor.less
@@ -44,16 +44,14 @@
 }
 
 @{customElementNamespace}list-editor {
-  .list-limiting-attribute,
-  .list-limiting-attribute-values {
+  .list-limiting {
     display: none;
     margin-left: 20px;
   }
 }
 
-@{customElementNamespace}list-editor.is-limited-by-attribute {
-  .list-limiting-attribute,
-  .list-limiting-attribute-values {
+@{customElementNamespace}list-editor.is-limited {
+  .list-limiting {
     display: block;
   }
 }
