--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/result-add/result-add.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/result-add/result-add.hbs
@@ -12,7 +12,7 @@
  **/
  --}}
 <div class="is-header">
-    Add to List
+    Add / remove from lists
 </div>
 <div class="is-divider"></div>
 {{#each this}}
