--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/buttons.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/buttons.less
@@ -32,7 +32,7 @@ button.is-primary {
   }
 
   &.is-disabled, &:disabled {
-    //background: tint(@buttonColor, 50%);
+    .background-gradient(tint(@buttonColor, 10%), shade(@buttonColor, 10%));
     cursor: not-allowed;
   }
 }
