--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/list-editor/list-editor.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/list-editor/list-editor.hbs
@@ -15,13 +15,10 @@
     <div class="list-title">
 
     </div>
-    <div class="list-limiting-attribute-switch">
+    <div class="list-limiting-switch">
 
     </div>
-    <div class="list-limiting-attribute">
-
-    </div>
-    <div class="list-limiting-attribute-values">
+    <div class="list-limiting">
 
     </div>
     <div class="list-icon">
