--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/list-item/list-item.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/list-item/list-item.hbs
@@ -17,7 +17,7 @@
     <div class="list-details">
         <div class="details-header">
             <span class="header-icon" data-help="The icon you've given to the list.">
-                <span class="{{bindAttr attr="class" selector=".details-header > .header-icon > span" event="change:icon" key=(path "icon")}}"></span>
+                <span class="{{bindAttr attr="class" selector=".details-header > .header-icon > span" event="change:list.icon" key=(path "icon")}}"></span>
             </span>
             <span class="header-title" data-help="The name you've given to the list.">
                 {{bind selector=".details-header > .header-title" event="change:title" key=(path "title")}}
@@ -29,16 +29,16 @@
         <div class="details-feed" data-help="Shows the status of the list, such as the number of results.">
         </div>
         <div class="details-footer">
-            <button class="list-delete is-button" title="Runs the search." data-help="Runs the search.">
+            <button class="list-delete is-button" title="Deletes the list." data-help="Deletes the list.">
                 <span class="fa fa-minus"></span>
             </button>
-            <button class="list-run is-button" title="Runs the search." data-help="Runs the search.">
+            <button class="list-run is-button" title="Runs the list search." data-help="Runs the list search.">
                 <span class="fa fa-play"></span>
             </button>
-            <button class="list-stop is-button" title="Stops a search in the progress of executing.  If results have already returned from some sources, you won't lose them." data-help="Stops a search in the progress of executing.  If results have already returned from some sources, you won't lose them.">
+            <button class="list-stop is-button" title="Stops a list search in the progress of executing.  If results have already returned from some sources, you won't lose them." data-help="Stops a search in the progress of executing.  If results have already returned from some sources, you won't lose them.">
                 <span class="fa fa-stop"></span>
             </button>
-            <div class="list-edit is-button" title="Edits the search criteria." data-help="Edits the search criteria.">
+            <div class="list-edit is-button" title="Edits the list." data-help="Edits the list.">
                 <span class="fa fa-pencil"></span>
             </div>
             <button class="list-actions is-button" title="Shows a list of actions to take on the list." data-help="Shows a list of actions to take on the list.">
