--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/result-item/result-item.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/result-item/result-item.hbs
@@ -82,7 +82,7 @@
             <button class="result-download fa fa-download is-button is-neutral" title="Downloads the results associated product directly to your machine." data-help="Downloads
             the results associated product directly to your machine.">
             </button>
-            <button class="result-add is-button is-neutral" title="Add the result to a list, or make a new list with this result." data-help="Add the result to a list, or make a new list with this result.">
+            <button class="result-add is-button is-neutral" title="Add or remove the result from a list, or make a new list with this result." data-help="Add or remove the result from a list, or make a new list with this result.">
             </button>
             <div class="result-actions is-button" title="Provides a list of actions to take on the result." data-help="Provides a list
             of actions to take on the result.">
