--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/component.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/component.less
@@ -230,3 +230,4 @@
 @import 'list-create/list-create';
 @import 'list-interactions/list-interactions';
 @import 'notfound/notfound';
+@import 'export-actions/export-actions';
