--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/metacard-actions/metacard-actions.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/metacard-actions/metacard-actions.less
@@ -1,6 +1,7 @@
 @{customElementNamespace}metacard-actions {
   overflow: auto;
   .customElement;
+  padding: @largeSpacing 0px;
 
   a {
     display: block;
