--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/metacard-interactions/metacard-interactions.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/metacard-interactions/metacard-interactions.less
@@ -41,7 +41,7 @@
   }
 
   .interaction-add,
-  .interaction-actions {
+  .interaction-actions-export {
     padding: 0px 0px;
     > @{customElementNamespace}dropdown {
       padding: 0px 10px;
