--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/dropdown/dropdown.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/dropdown/dropdown.less
@@ -70,7 +70,7 @@
   }
 
   .dropdown-icon {
-    color: @button-text-color;
+    color: contrast(@primary-color);
     display: inline-block;
     background: @primary-color;
     width: @minimumButtonSize;
