--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/export-actions/export-actions.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/export-actions/export-actions.hbs
@@ -11,9 +11,8 @@
  *
  **/
  --}}
-<input class="dropdown-companion-filter" type="text" placeholder="Type to Filter">
-<button class="is-neutral">
-    Toggle All
-</button>
-<div class="dropdown-companion-component composed-menu">
-</div>
+{{#each this}}
+    <div data-url="{{this.url}}">
+        {{this.title}}
+    </div>
+{{/each}}
