--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/input/date/input-date.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/input/date/input-date.less
@@ -18,4 +18,9 @@
       word-break: break-all;
       min-height: @minimumButtonSize;
     }
+
+    .input-group > span.input-group-addon {
+      background: @primary-color !important;
+      color: contrast(@primary-color) !important;
+    }
 }
