--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/input/input.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/input/input.less
@@ -18,7 +18,7 @@
   }
 
   .for-error {
-        color: @button-text-color; 
+        color: contrast(@negative-color);
         overflow: hidden;
         display: block;
         line-height: @minimumLineSize;
