--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/metacard-actions/metacard-actions.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/metacard-actions/metacard-actions.hbs
@@ -11,9 +11,17 @@
  *
  **/
  --}}
- {{#each actions}}
+ <div class="is-divider"></div>
+ <div class="is-header">
+    Export as:
+ </div>
+ <div class="is-divider"></div>
+ <div class="export-actions">
+     {{#each this}}
      <a href="{{this.url}}" target="_blank">
          {{this.title}}
      </a>
- {{/each}}
+    {{/each}}
+ </div>
+<div class="is-divider"></div>
  <div class="map-actions"></div>
