--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/metacard-interactions/metacard-interactions.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/metacard-interactions/metacard-interactions.hbs
@@ -70,3 +70,5 @@ the results associated product directly to your machine.">
         Create Search from Location
     </div>
 </div>
+<div class="metacard-interaction interaction-actions-export composed-menu" data-help="Opens the available actions for the item.">
+</div>
