--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/metacard-interactions/metacard-interactions.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/metacard-interactions/metacard-interactions.less
@@ -40,7 +40,8 @@
     margin-left: 15px;
   }
 
-  .interaction-add {
+  .interaction-add,
+  .interaction-actions-export {
     padding: 0px 0px;
     > @{customElementNamespace}dropdown {
       padding: 0px 10px;
