--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/bootstrapDatepicker.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/bootstrapDatepicker.less
@@ -26,7 +26,7 @@
 .input-group > span.input-group-addon {
   border-radius: @border-radius;
   background: @primary-color;
-  color: @button-text-color;
+  color: contrast(@primary-color);
   border: none;
   font-size: @largeFontSize;
   width: @minimumButtonSize;
