--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/headerAndFooter.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/headerAndFooter.less
@@ -57,7 +57,7 @@ html.is-development {
     header div,
     footer div {
         background: @primary-color;
-        color: @button-text-color;
+        color: contrast(@primary-color);
     }
 
     header,
