--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/higherordermixins.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/higherordermixins.less
@@ -7,4 +7,6 @@
     .is-range-input(contrast(@newbackground));
     .is-divider(contrast(@newbackground));
     .changeFontWeight(contrast(@newbackground));
+    .has-navigation-behavior(contrast(@newbackground));
+    .is-link(contrast(@newbackground));
 }
