--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/init.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/init.less
@@ -25,3 +25,4 @@
 @import 'jquery-ui';
 @import 'higherordermixins';
 @import "../../component/component";
+@import "../../behaviors/navigation.behavior.less";
