--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/dropdown/list-select/dropdown.list-select.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/dropdown/list-select/dropdown.list-select.less
@@ -24,7 +24,7 @@
   
     > .dropdown-icon {
       position: absolute;
-      color: @button-text-color;
+      color: contrast(@primary-color);
       display: inline-block;
       background: @primary-color;
       width: @minimumButtonSize;
