--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/dropdown/query-src/dropdown.query-src.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/dropdown/query-src/dropdown.query-src.less
@@ -82,7 +82,7 @@
   }
 
   .dropdown-icon {
-    color: @button-text-color;
+    color: contrast(@primary-color);
     display: inline-block;
     background: @primary-color;
     width: @minimumButtonSize;
