--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/metacard-actions/metacard-actions.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/metacard-actions/metacard-actions.less
@@ -1,11 +1,18 @@
 @{customElementNamespace}metacard-actions {
   overflow: auto;
   .customElement;
+  padding: 0px @largeSpacing;
+
+  .is-header {
+    text-align: left;
+  }
+
+  .export-actions {
+    padding: 0px @largeSpacing;
+  }
 
   a {
     display: block;
-    line-height: @minimumButtonSize;
-    padding: 0px @largeSpacing;
   }
 
   a {
