--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/buttons.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/buttons.less
@@ -37,13 +37,13 @@ button,
 
 button.is-negative,
 .composed-button.is-negative {
-  color: @button-text-color;
+  color: contrast(@negative-color);
   .button-mixin(@negative-color);
 }
 
 button.is-positive,
 .composed-button.is-positive {
-  color: @button-text-color;
+  color: contrast(@positive-color);
   .button-mixin(@positive-color);
 }
 
@@ -64,7 +64,7 @@ button.is-link,
 
 button.is-primary,
 .composed-button.is-primary {
-  color: @button-text-color;
+  color: contrast(@primary-color);
   .button-mixin(@primary-color);
 }
 
