--- a/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/links.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/styles/components/links.less
@@ -1,17 +1,49 @@
-a {
-    color: @links-color;
-    .is-bold();
-
-    &:hover {
-        .is-bold();
-        color: shade(@links-color, 10%);
+.is-link(@contrastColor: white) {
+    a {
+        padding: @minimumSpacing;
+        color: @contrastColor;
         text-decoration: underline;
-    }
-
-    &:visited {
-        color: @links-visited-color;
+        .is-bold();
+    
         &:hover {
-            color: shade(@links-visited-color, 10%);
+            .is-bold();
+            color: @contrastColor;
+            text-decoration: underline;
+        }
+    
+        &:visited {
+            color: @contrastColor;
+            &:hover {
+                color: @contrastColor;
+            }
         }
     }
+    // a {
+    //     background: @primary-color;
+    //     padding: @minimumSpacing;
+    //     color: contrast(@primary-color);
+    //     .is-bold();
+    
+    //     &:hover {
+    //         .is-bold();
+    //         color: shade(contrast(@primary-color), 10%);
+    //         text-decoration: underline;
+    //     }
+    
+    //     &:visited {
+    //         color: shade(contrast(@primary-color), 10%);
+    //         &:hover {
+    //             color: shade(contrast(@primary-color), 10%);
+    //         }
+    //     }
+    // }
+    // a::before {
+    //     content: '\F08E';
+    //     font: normal normal normal 14px/1 FontAwesome;
+    //     font-size: inherit;
+    //     text-rendering: auto;
+    //     -webkit-font-smoothing: antialiased;
+    //     -moz-osx-font-smoothing: grayscale;
+    // }
 }
+.is-link();
