--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/dropdown/dropdown.companion.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/dropdown/dropdown.companion.hbs
@@ -15,5 +15,5 @@
 <button class="is-neutral">
     Toggle All
 </button>
-<div class="dropdown-companion-component">
+<div class="dropdown-companion-component composed-menu">
 </div>
