--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/query-status/query-status-row.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/query-status/query-status-row.hbs
@@ -55,7 +55,7 @@
     {{/if}}
 </td>
 <td class="status-filter">
-    <button class="is-button is-link" title="Locally filter results to this source only.">
+    <button class="is-button is-primary in-text" title="Locally filter results to this source only.">
         <span class="fa fa-filter"></span>
     </button>
 </td>
