--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/search-select/search-select.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/search-select/search-select.hbs
@@ -11,18 +11,18 @@
  *
  **/
  --}}
-<div class="select-list">
+<div class="select-list composed-menu">
    
 </div>
 <button class="is-primary select-add">
     <span class="fa fa-search"></span>
     <span>New Search</span>
 </button>
-<span class="select-limit">
+<span class="select-limit composed-menu">
     Max number of searches reached for this workspace (10).
     Please delete a search in order to make a new one, or modify an existing search to suit your needs.
 </span>
-<span class="select-one">
+<span class="select-one composed-menu">
     Only one search in this workspace so far.
-    Click <span class="quick-add is-button is-link">here</span> or the magnifying glass in the navigation bar above to add more.
+    Click <button class="quick-add is-primary in-text">here</button> or the magnifying glass in the navigation bar above to add more.
 </span>
