--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/list-item/list-item.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/list-item/list-item.hbs
@@ -42,11 +42,10 @@
                 <span class="fa fa-stop"></span>
             </button>
             <div class="list-edit is-button" title="Edits the list." data-help="Edits the list.">
-                <span class="fa fa-pencil"></span>
             </div>
-            <div class="list-add is-button" title="Add items to the list." data-help="Import or manually add new items to the list.">
+            <button class="list-add is-button" title="Add items to the list." data-help="Import or manually add new items to the list.">
                 <span class="fa fa-upload"></span>
-            </div>
+            </button>
             <div class="list-actions composed-button is-button" title="Shows a list of actions to take on the list." data-help="Shows a list of actions to take on the list.">
             </div>
         </div>
