Improve Admin UI

--- a/ui/packages/ui/src/main/webapp/components/application-item/application-item.collection.empty.hbs
+++ b/ui/packages/ui/src/main/webapp/components/application-item/application-item.collection.empty.hbs
@@ -11,4 +11,9 @@
  *
  **/
  --}}
-<div id="servicesRegion"></div>
+<h4 align="center">
+    <span class="fa fa-refresh fa-spin fa-5x"></span>
+    <div>
+        Loading Applications
+    </div>
+</h4>
