--- a/ui/packages/ui/src/main/webapp/components/application-item/application-item.less
+++ b/ui/packages/ui/src/main/webapp/components/application-item/application-item.less
@@ -12,5 +12,9 @@
  * <http://www.gnu.org/licenses/lgpl.html>.
  *
  **/
-@import "init.less";
-@import "../components/components.less";
+@{customElementNamespace}application-item-collection {
+    display: block;
+}
+@{customElementNamespace}application-item {
+    display: block;
+}
