--- a/ui/packages/ui/src/main/webapp/components/installer-navigation/installer-navigation.hbs
+++ b/ui/packages/ui/src/main/webapp/components/installer-navigation/installer-navigation.hbs
@@ -11,8 +11,21 @@
  *
  **/
  --}}
-<table class="table service-row-table">
-    <tbody>
+<ul class="pager">
 
-    </tbody>
-</table>
+
+
+</ul>
+<div class="last-progress-text-area">
+
+</div>
+<div class="progress-text-area">
+    <span class="progress-text" name="message">{{message}}</span>
+</div>
+<center>
+    <div class="progress">
+        <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+
+        </div>
+    </div>
+</center>
