--- a/ui/packages/ui/src/main/webapp/components/components.less
+++ b/ui/packages/ui/src/main/webapp/components/components.less
@@ -12,5 +12,11 @@
  * <http://www.gnu.org/licenses/lgpl.html>.
  *
  **/
-@import "init.less";
-@import "../components/components.less";
+@import 'installer/installer';
+@import 'application-item/application-item';
+@import 'installer-navigation/installer-navigation';
+@import 'configuration-item/configuration-item';
+@import 'service-item/service-item';
+@import 'application-services/application-services';
+@import 'feature-item/feature-item';
+@import 'features/features';
