--- a/ui/packages/ui/src/main/webapp/components/installer/installer.hbs
+++ b/ui/packages/ui/src/main/webapp/components/installer/installer.hbs
@@ -11,6 +11,14 @@
  *
  **/
  --}}
+<div class="loading" class="inner-content">
+    <h4 align="center">
+        <span class="fa fa-refresh fa-spin fa-5x"></span>
+        <div>
+            Loading next step
+        </div>
+    </h4>
+</div>
 <div id="welcome" class="inner-content" style="display:none">
 
 </div>
@@ -31,12 +39,4 @@
 </div>
 <div id="navigation" class="bottom-navs">
 
-</div>
-<div class="loading" class="inner-content" style="display: none;">
-    <h4 align="center">
-        <span class="fa fa-refresh fa-spin fa-5x"></span>
-        <div>
-            Loading next step
-        </div>
-    </h4>
 </div>
