Improve Admin UI

--- a/ui/packages/ui/src/main/webapp/components/application-services/application-services.hbs
+++ b/ui/packages/ui/src/main/webapp/components/application-services/application-services.hbs
@@ -11,10 +11,4 @@
  *
  **/
  --}}
-<div id="application-outline">
-    <div id="application-grid-layout" class="application-scroll scroll-area ps-container white">
-        <div class="apps-grids">
-            <div class="apps-grid-container installed"></div>
-        </div>
-    </div>
-</div>
+<div class="services"></div>
