--- a/ui/packages/ui/src/main/webapp/components/installer/installer.hbs
+++ b/ui/packages/ui/src/main/webapp/components/installer/installer.hbs
@@ -11,10 +11,32 @@
  *
  **/
  --}}
-<div id="application-outline">
-    <div id="application-grid-layout" class="application-scroll scroll-area ps-container white">
-        <div class="apps-grids">
-            <div class="apps-grid-container installed"></div>
+<div class="loading" class="inner-content">
+    <h4 align="center">
+        <span class="fa fa-refresh fa-spin fa-5x"></span>
+        <div>
+            Loading next step
         </div>
-    </div>
+    </h4>
+</div>
+<div id="welcome" class="inner-content" style="display:none">
+
+</div>
+<div id="configuration" class="inner-content" style="display:none">
+
+</div>
+<div id="guestClaims" class="inner-content" style="display:none">
+
+</div>
+<div id="applications" class="inner-content" style="display:none">
+
+</div>
+<div id="finish" class="inner-content" style="display:none">
+
+</div>
+<div id="profiles" class="inner-content" style="display:none">
+
+</div>
+<div id="navigation" class="bottom-navs">
+
 </div>
