--- a/ui/packages/ui/src/main/webapp/components/service-item/service-item.collection.empty.hbs
+++ b/ui/packages/ui/src/main/webapp/components/service-item/service-item.collection.empty.hbs
@@ -11,10 +11,9 @@
  *
  **/
  --}}
-<div id="application-outline">
-    <div id="application-grid-layout" class="application-scroll scroll-area ps-container white">
-        <div class="apps-grids">
-            <div class="apps-grid-container installed"></div>
-        </div>
+<h4 align="center">
+    <span class="fa fa-refresh fa-spin fa-5x"></span>
+    <div>
+        Loading Configurations
     </div>
-</div>
+</h4>
