--- a/ui/packages/ui/src/main/webapp/components/configuration-item/configuration-item.hbs
+++ b/ui/packages/ui/src/main/webapp/components/configuration-item/configuration-item.hbs
@@ -11,10 +11,21 @@
  *
  **/
  --}}
-<div id="application-outline">
-    <div id="application-grid-layout" class="application-scroll scroll-area ps-container white">
-        <div class="apps-grids">
-            <div class="apps-grid-container installed"></div>
+<div>
+    <a href='#{{uuid}}' class='editLink' data-toggle="modal" data-backdrop="static" data-keyboard="false">
+        {{displayName}}
+    </a>
+    <div class="config-modal-container">
+        <div id="{{uuid}}" class="config-modal modal" tabindex="-1" role="dialog" aria-hidden="true">
+
         </div>
     </div>
+</div>
+<div>
+    {{bundle_name}}
+</div>
+<div>
+    {{#if hasFactory}}
+    <a href='#' class='removeLink glyphicon glyphicon-remove'></a>
+    {{/if}}
 </div>
